testsuite/tests/parser/should_fail/pfail023.alan
hello() : proc
  foo : int;
{
  if( *foo)
      foo =4;
  foo = 3;
}
