testsuite/tests/parser/should_fail/pfail023.stderr
pfail023.alan:4:7: Error: Parse error on input `*'
	Not a valid condition

